@@ -6,6 +6,7 @@ Version 1.7.0-svn:
      number generator with.
    * new logdomain : uploader to see stat-upload related actions
  * AI:
+   * Added command-line option ai_config<number>=<value>
    * Fixed incorrect handling of poisoning attacks when suggesting best attack
      in user interface
    * Added basic history and hot-redeployment capabilities to in-game console.
